--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     margin-left: -15px;
     margin-right: -15px;
     }
+    td{width: 100px;}
+    tr{color:#013D90;}
 </style>
 	<title>体育健康</title>
 </head>
@@ -63,110 +65,103 @@
     <p>SPORTS&HEALTH</p>
    </header>
 
-<p class="head" style="width: 212px;"><img class="pic" style="width: 32px; 
+<p class="head" style="width: 175px;"><img class="pic" style="width: 32px; 
     	height: 32px;
-    	float: left;" src="26 (3).png"><b>公司附近的健身设施</b></br></p>
-   <p style="color:#013D90;"> 东方体育中心：上海东方体育中心（Oriental Sports Center），被称为“海上王冠”，拥有游泳池、篮球场、羽毛球场、足球场等丰富的运动休闲场馆，是上海标志性的大型体育场所。</p>
+    	float: left;" src="26 (1).png"><b>员工运动俱乐部</b></br></p>
+   <p style="color:#013D90;"> 员工俱乐部是公司为众多运动爱好者提供交流和活动的平台，公司将提供部分场地及比赛的费用支持。</p>
 <div id="ball"  >
-	<p style="padding-bottom: 0.7px; border-bottom: 1px solid; font-size: 1.2em; ">室内游泳池&nbsp;</p>
-	<p style="color: white">规格:20m*50m<br>
-	   一片场地<br>开发时间：全年<br>
-	   9：00-21：00<br>
-	   票价：60元/3小时</p>
+	
 </div>
-
-<div  id="ball" style="float: none; " >
-	<p style="padding-bottom: 1.7px;  font-size: 1.2em">室内羽毛球场&nbsp;</p>
-	<p style="color: white">规格:15m*7.1m<br>
-	   10片场地<br>
-	   开发时间：<br>9：00-22：00<br>
-	   票价：60元/小时</p>
-</div>
-
-
-
-<div   id="ball"  >
-	<p style=" font-size: 1.2em; padding-bottom: 0.7px; border-bottom: 1px solid ;">室内篮球场&nbsp;</p>
-	<p style="color: white">
-	  规格：26m*15m;<br>
-      4片场地<br>
-      开放时间：<br>
-      13：00-21：00<br>
-      票价：10元/人</p>
-</div>
-
-<div  id="ball" style="float: none;">
-	<p style="  font-size: 1.2em">室外足球场&nbsp;</p>
-	<div style="color: white">
-	   规格：7*7 &11&11<br>
-场地各两片<br>
-开放时间：
-<br>13：00-21：00<br>
-票价：10元/人/小时<br><br></div> 
-</div>
-
+<p style="color:#013D90;"><b>欲知加入方式，敬请留意员工俱乐部近期发出的招募邮件。</b></p>
 
 <p class="head" style="width:157px;"><img class="pic" style="width: 32px; 
     	height: 32px;
-    	float: left;" src="26 (2).png"><b>周边健身场馆</b></br></p>
-<div id="ball" style="color: #013D90;;margin-right: 33px;" >
-	<b>瑜伽馆</b>
-	<p style="color: white">
-	  REAL瑜伽生活馆<br>
-      成山路220号<br>
-      距离新家：2.9km</p>
+    	float: left;" src="26 (2).png"><b>东方体育中心</b></br></p>
+<div id="ball" style="color: #013D90">
+	东方体育中心是上海标志性的大型体育场所，毗邻地铁站，距离新办公室仅500米，步行可达。
 </div>
+<p style="color:#013D90;">咨询预订电话：021-20232008</p>
 
-<div id="ball" style="float:none;" >
-	<b style="color: #013D90;">健身房</b>
-	<p style="color: white">
-	  威尔士健身会所<br>
-      徐汇中山南路699号<br>
-      距离新家：8km</p>
 
-<div id="ball"  >
-	<b style="color: #013D90;">篮球馆</b>
+<p class="head" style="width:194px;" >
+<img class="pic" style="width: 32px; height: 32px;
+float: left;" src="26 (3).png">
+   <b>其他周边运动场馆</b>
+</p>
+<table>
 	
-	<p style="color: white">
-	  米高篮球俱乐部<br>
-      下南路900号<br>
-      距离新家：7.3km<br><br>
-
-      世博洛克公园<br>
-      世博大道1368号<br>
-      距新家距离：4.3km</p>
-</div>
-<div id="ball" style=" color: #013D90; float:none;" >
-	<b>羽毛球球场</b>
-	
-	<p style="color: white">
-	  群星职校羽毛球馆<br>
-      通州路240号<br>
-      距离新家：2.6km<br><br>
-      博宽羽毛球馆<br>
-      浦东新区杨思路1371号<br>
-      距离新家：3.2km</p>
-</div>
-<p class="head" style="width:142px;" ><img class="pic" style="width: 32px; 
-    	height: 32px;
-    	float: left;" src="26 (1).png"><b>员工俱乐部</b></br></p>
-
-
-
-
-
-
-<br>
-<br>
-<div>
-<p class="head"> <b>V+ FITNESS CENTER</b></p>
-<p style="color: #330099;">位于公司楼下一层，约200平米，配有5名私人教练6种经典课程：新手入门，美背塑胸，美腿翘臀，全身塑燃，核心紧致，超能燃脂更有瑜伽，普拉提，boxing等特色课程</p>
-
-
+<tr >
+       <td>场馆</td>
+       <td>电话</td>
+       <td>距离新家(km)</td>
+   </tr></table>
+   <hr style="margin-top: 2px; ;border-top: 0.8px solid #013D90;;">
+<table border="0">
    
-	
-	
-	<img style="float: right; " src="32.png">
+
+   <tr style="font-size: 1.1em; color: #C7672D; width: 300px;">
+       <td><b>篮球馆</b></td>
+   </tr>
+   <tr>
+        <td>Fitplus</td>
+        <td>021-31583157</td>
+        <td>3.9</td>
+    </tr>
+    <tr>
+        <td>洛克公园</td>
+        <td>021-61726038</td>
+        <td>4</td>
+    </tr>
+    <tr style="font-size: 1.1em; color: #C7672D; width: 300px;">
+       <td><b>足球场</b></td>
+   </tr>
+   <tr>
+        <td>PUBOX</td>
+        <td>4008051719</td>
+        <td>3.4</td>
+    </tr>
+    <tr>
+        <td>世博体育公园</td>
+        <td>18121253923</td>
+        <td>3.9</td>
+    </tr>
+    <tr style="font-size: 1.1em; color: #C7672D; width: 300px;">
+       <td><b>健身房</b></td>
+   </tr>
+   <tr>
+        <td>V+Fitness Center</td>
+        <td>13661510904</td>
+        <td>0.1</td>
+    </tr>
+    <tr>
+        <td>一兆韦德</td>
+        <td>021-50151002</td>
+        <td>3.7</td>
+    </tr>
+   <tr style="font-size: 1.1em; color: #C7672D; width: 300px;">
+       <td><b>Yoga</b></td>
+   </tr>
+   <tr>
+        <td>Real瑜伽<br>生活馆</td>
+        <td>021-68366696<br>13816453877</td>
+        <td>2.9</td>
+    </tr>
+    
+       <tr style="font-size: 1.1em; color: #C7672D; width: 300px;">
+       <td><b>羽毛球馆</b></td>
+   </tr>
+   <tr>
+        <td>博宽羽毛球馆</td>
+        <td>021-50496658</td>
+        <td>3.2</td>
+    </tr>
+    <tr>
+        <td>凌兆羽毛球馆</td>
+        <td>021-50820808</td>
+        <td>3.3</td>
+    </tr>
+    </table>
+	<img style="float: right; clear:both;" src="32.PNG">
 	<div style="float: right; clear: right;">
 	<p style="color:#013D90; ">Medtronic<br>
 	&nbsp;美&nbsp;敦&nbsp;力</p>
