--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
    img{margin-left: 0;
        margin-right: 0;}
    header{color: white;
-          font-size:2em;}
+          font-size:2em;
+          }
        header p{
                 font-size: 0.5em;
                 margin-top: -5px;
@@ -47,23 +48,24 @@
     margin-top: -4px;
     margin-bottom: 5px;
     border: 0;
-    border-top: 2px solid #C7672D;
-    margin-left: -15px;
-    margin-right: -15px;
+    border-top: 1px solid #C7672D;
+    opacity: 0.5;
+
     }
     td{width: 100px;}
     tr{color:#013D90;}
     a{color:#013D90;}
+
 </style>
 	<title>体育健康</title>
 </head>
 <body >
 <div class="container-fluid">	
   <header>
-    <img style="width: 50px; height: 60px;" src="26 (4).png">
-    &nbsp;&nbsp;体育健康<br>
+    <img style="width: 50px; height: 60px; margin-right: -25px;" src="26 (4).png">
+    &nbsp;&nbsp;运动<br>
     <hr>
-    <p>SPORTS&HEALTH</p>
+    <p>&nbsp;&nbsp;&nbsp;SPORTS</p>
    </header>
 
 <p class="head" style="width: 175px;"><img class="pic" style="width: 32px; 
@@ -81,7 +83,7 @@
 <div id="ball" style="color: #013D90">
 	东方体育中心是上海标志性的大型体育场所，毗邻地铁站，距离新办公室仅500米，步行可达。
 </div>
-<p style="color:#013D90;">咨询预订电话：021-20232008</p>
+<p style="color:#013D90;">咨询预订电话：<a herf="tel:021-20232008">021-20232008</a></p>
 
 
 <p class="head" style="width:194px;" >
