--- a/eat.html
+++ b/eat.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
 	<!--链接bootstrap-->
 <style type="text/css">
-   body{background-color: #85CAE8;
+   body{background-color: #BAE3F9;
 	font-family:arial;}
    img{margin-left: 0;
        margin-right: 0;}
@@ -47,16 +47,17 @@
     margin-top: -4px;
     margin-bottom: 5px;
     border: 0;
-    border-top: 2px solid #EFAB28;
-
-
-    margin-left: -15px;
-    margin-right: -15px;
+    border-top: 1px solid #EFAB28;
+    opacity: 0.5;
     }
     .pic{
     	width: 32px; 
     	height: 32px;
     	float: left;"
+    }
+    .nameRes{
+    	font-size: 1.2em; margin:0;
+    	font-weight: bold;
     }
 </style>
 	<title>餐饮</title>
@@ -64,7 +65,7 @@
 <body >
 <div class="container-fluid">	
   <header>
-    <img style="width: 45px; height: 60px;" src="1.png">
+    <img style="width: 50px; height: 60px;margin-right: -25px;" src="1.PNG">
     &nbsp;&nbsp;餐饮<br>
     <hr>
     <p>CATERING</p>
@@ -85,12 +86,22 @@
 </div>-->
 
 
-<img class="pic" src="2.png">
+<img class="pic" src="2.PNG">
 <p class="head" ><b>&nbsp;园区餐厅</b></br></p>
-	   <img class="pic" src="3.png">   <p class="head" style="width: 162px;"><b>&nbsp;园区附近餐厅</b></br></p>
+	   
 	      
-<div id="ball" " >
-	<p style="padding-bottom: 1.7px;  font-size: 1.3em; ">小杨生煎&nbsp;</p>
+
+<img class="pic" src="4.PNG">
+<p class="head" style="width: 162px;"><b>&nbsp;园区食堂介绍</b></br></p>
+<img class="pic" src="5.PNG">
+<p class="head" style="width: 200px;"><b>&nbsp;索迪斯卡（TBD）</b></br></p>
+<img style="float: right;" src="6.PNG">
+<li style="color: #013D90; font-weight: 14px;">索迪斯卡可以在园区内所有已经开业的餐饮与服务设施使用，也将能够在未来所有开业的餐饮与服务设施（包括健身房，诊所，幼儿教育机构）内开通使用。</li>
+
+<img class="pic" src="3.PNG">   <p class="head" style="width: 162px;"><b>&nbsp;园区附近餐厅</b></br></p>
+
+	<div id="ball" >
+	<p class="nameRes">小杨生煎&nbsp;</p>
 	<p style="color: white">TEL：
 	<a style="color: white" href="tel:02150472973">021-50472973</a>
 	<br>距离公司：2KM<br>
@@ -98,22 +109,96 @@
 </div>
 
 <div  id="ball" style="float: none; " >
-	<p style="padding-bottom: 1.7px;  font-size: 1.3em">港式蛋包饭&nbsp;</p>
+	<p class="nameRes">港式蛋包饭&nbsp;</p>
 	<p style="color: white">TEL：
 	<a style="color: white" href="tel:18516789886">18516789886</a>
 	<br>距离公司：765M<br>
 	   </p>
 </div>
-<img class="pic" src="4.png">
-<p class="head" style="width: 162px;"><b>&nbsp;园区食堂介绍</b></br></p>
-<img class="pic" src="5.png">
-<p class="head" style="width: 197px;"><b>&nbsp;索迪斯卡（TBD）</b></br></p>
-<img style="float: right;" src="6.png">
+
+<div id="ball" >
+	<p class="nameRes">小杨生煎&nbsp;</p>
+	<p style="color: white">TEL：
+	<a style="color: white" href="tel:02150472973">021-50472973</a>
+	<br>距离公司：2KM<br>
+	   </p>
+</div>
+
+<div  id="ball" style="float: none; " >
+	<p class="nameRes">港式蛋包饭&nbsp;</p>
+	<p style="color: white">TEL：
+	<a style="color: white" href="tel:18516789886">18516789886</a>
+	<br>距离公司：765M<br>
+	   </p>
+</div>
+
+<div id="ball" >
+	<p class="nameRes">小杨生煎&nbsp;</p>
+	<p style="color: white">TEL：
+	<a style="color: white" href="tel:02150472973">021-50472973</a>
+	<br>距离公司：2KM<br>
+	   </p>
+</div>
+
+<div  id="ball" style="float: none; " >
+	<p class="nameRes">港式蛋包饭&nbsp;</p>
+	<p style="color: white">TEL：
+	<a style="color: white" href="tel:18516789886">18516789886</a>
+	<br>距离公司：765M<br>
+	   </p>
+</div>
+
+<div id="ball" >
+	<p class="nameRes">小杨生煎&nbsp;</p>
+	<p style="color: white">TEL：
+	<a style="color: white" href="tel:02150472973">021-50472973</a>
+	<br>距离公司：2KM<br>
+	   </p>
+</div>
+
+<div  id="ball" style="float: none; " >
+	<p class="nameRes">港式蛋包饭&nbsp;</p>
+	<p style="color: white">TEL：
+	<a style="color: white" href="tel:18516789886">18516789886</a>
+	<br>距离公司：765M<br>
+	   </p>
+</div>
+
+<div id="ball" >
+	<p class="nameRes">小杨生煎&nbsp;</p>
+	<p style="color: white">TEL：
+	<a style="color: white" href="tel:02150472973">021-50472973</a>
+	<br>距离公司：2KM<br>
+	   </p>
+</div>
+
+<div  id="ball" style="float: none; " >
+	<p class="nameRes">港式蛋包饭&nbsp;</p>
+	<p style="color: white">TEL：
+	<a style="color: white" href="tel:18516789886">18516789886</a>
+	<br>距离公司：765M<br>
+	   </p>
+</div>
+
+<div id="ball" >
+	<p class="nameRes">小杨生煎&nbsp;</p>
+	<p style="color: white">TEL：
+	<a style="color: white" href="tel:02150472973">021-50472973</a>
+	<br>距离公司：2KM<br>
+	   </p>
+</div>
+
+<div  id="ball" style="float: none; " >
+	<p class="nameRes">港式蛋包饭&nbsp;</p>
+	<p style="color: white">TEL：
+	<a style="color: white" href="tel:18516789886">18516789886</a>
+	<br>距离公司：765M<br>
+	   </p>
+</div>
 	
-	<div id="sign" style="float:right;">
-	<p style="color:#013D90; width: 60px;">Medtronic<br>
+	<p style="color:#013D90; width: 60px;float:right;clear: right;font-weight: bold;">Medtronic<br>
 	&nbsp;美&nbsp;敦&nbsp;力</p>
-	</div>
+	
 </div>
 </body>
 </html>
