--- a/eat.html
+++ b/eat.html
@@ -95,7 +95,7 @@
 <p class="head" style="width: 162px;"><b>&nbsp;园区食堂介绍</b></br></p>
 <img class="pic" src="5.png">
 <p class="head" style="width: 200px;"><b>&nbsp;索迪斯卡（TBD）</b></br></p>
-<img style="float: right;" src="6.PNG">
+<img style="float: right;" src="6.png">
 <li style="color: #013D90; font-weight: 14px;">索迪斯卡可以在园区内所有已经开业的餐饮与服务设施使用，也将能够在未来所有开业的餐饮与服务设施（包括健身房，诊所，幼儿教育机构）内开通使用。</li>
 
 <img class="pic" src="3.png">   <p class="head" style="width: 162px;"><b>&nbsp;园区附近餐厅</b></br></p>
