--- a/zixun.html
+++ b/zixun.html
@@ -35,7 +35,7 @@
 	      color: #A62790;
 	  font-size: 1.4em;
 	      
-	      width: 90px;
+	      width: 122px;
 	      
 	      padding-bottom: 2px;
 	      padding-top: 2px;
@@ -55,21 +55,25 @@
 <body >
 <div class="container-fluid">	
   <header>
-    <img src="header.PNG">
+    <img style="width: 50px; height: 60px;margin-right: -25px;" src="资源 8.png">
     &nbsp;基本资讯<br>
     <hr>
     <p>BASIC INFORMATION</p>
    </header>
-<p class="head"><b>&nbsp;&nbsp;大楼前台</b></br></p>
-   <p style="color: white;">公司将公司将资助员工俱乐部，定期举办集团活动每周安排美容
-   美发,按摩等上门服务，缓解工作压力，营造一个身心舒畅
-   的工作环境.
-   </p>
-   <p style="color: white">同时还将以公司的名义，与附近的休闲娱乐场所洽谈，为员工争取更过优惠，谋取更多便利。</p>
 
-<p class="head" style="width:135px;"><b>&nbsp;&nbsp;大楼保安中心</b></br></p>
-<p class="head" style="width:170px;"><b>&nbsp;&nbsp;公司快递收发须知</b><br></p>
-<p class="head" style="width:160px;" ><b>&nbsp;&nbsp;公司IT咨询须知</b></br></p>
+
+
+<img class="pic" style="width: 32px; 
+    	height: 32px;
+    	float: left;" src="资源 9.png"><p class="head" ><b>&nbsp;&nbsp;大楼管理热线</b></br></p>
+
+<img class="pic" style="width: 32px; 
+    	height: 32px;
+    	float: left;" src="资源 10.png"><p class="head" ><b>&nbsp;&nbsp;快递收发需知</b><br></p>
+
+<img class="pic" style="width: 32px; 
+    	height: 32px;
+    	float: left;" src="资源 11.png"><p class="head" style="width:160px;" ><b>&nbsp;&nbsp;其他常用电话</b></br></p>
 <p style="color:white;">IT咨询热线：
 	<a href="tel:4008219811">4008219811</a>
 	<br>ASKHR:
@@ -79,10 +83,10 @@
 	</p>
 
 
-	<div id="sign" style="float:right">
-	<p style="color:#013D90">Medtronic<br>
+	<img style="float: right; clear:both;" src="资源 7.png">
+	<p style="color:#013D90;float:right;">Medtronic<br>
 	&nbsp;美&nbsp;敦&nbsp;力</p>
-	</div>
+	
 </div>
 </body>
 </html>
