--- a/zixun.html
+++ b/zixun.html
@@ -35,7 +35,7 @@
 	      color: #A62790;
 	  font-size: 1.4em;
 	      
-	      width: 122px;
+	      width: 162px;
 	      
 	      padding-bottom: 2px;
 	      padding-top: 2px;
@@ -44,9 +44,8 @@
     margin-top: -4px;
     margin-bottom: 5px;
     border: 0;
-    border-top: 2px solid #A62790;;
-    margin-left: -15px;
-    margin-right: -15px;
+    border-top: 1px solid #A62790;;
+    opacity: 0.5;
     }
     a{color: white;}
 </style>
@@ -73,7 +72,7 @@
 
 <img class="pic" style="width: 32px; 
     	height: 32px;
-    	float: left;" src="资源 11.png"><p class="head" style="width:160px;" ><b>&nbsp;&nbsp;其他常用电话</b></br></p>
+    	float: left;" src="资源 11.png"><p class="head" style="width:192px;" ><b>&nbsp;&nbsp;其他常用电话</b></br></p>
 <p style="color:white;">IT咨询热线：
 	<a href="tel:4008219811">4008219811</a>
 	<br>ASKHR:
