--- a/zixun.html
+++ b/zixun.html
@@ -72,7 +72,7 @@
 
 <img class="pic" style="width: 32px; 
     	height: 32px;
-    	float: left;" src="资源 11.png"><p class="head" style="width:192px;" ><b>&nbsp;&nbsp;其他常用电话</b></br></p>
+    	float: left;" src="资源 11.png"><p class="head"><b>&nbsp;&nbsp;其他常用电话</b></br></p>
 <p style="color:white;">IT咨询热线：
 	<a href="tel:4008219811">4008219811</a>
 	<br>ASKHR:
@@ -80,10 +80,12 @@
 	<br>SSS:
 	<a  href="tel:4008803588">4008803588</a><br>
 	</p>
-
+<img class="pic" style="width: 32px; 
+    	height: 32px;
+    	float: left;" src="资源 11.png"><p class="head"><b>&nbsp;&nbsp;<a herf="https://github.com/nicholeemma/Baidu/blob/gh-pages/MSIC%20One%20Page%20Guide.pptx">IT指南</a></b></br></p>
 
 	<img style="float: right; clear:both;" src="资源 7.png">
-	<p style="color:#013D90;float:right;">Medtronic<br>
+	<p style="color:#013D90;float:right;clear: right;">Medtronic<br>
 	&nbsp;美&nbsp;敦&nbsp;力</p>
 	
 </div>
