--- a/zixun.html
+++ b/zixun.html
@@ -82,7 +82,7 @@
 	</p>
 <img class="pic" style="width: 32px; 
     	height: 32px;
-    	float: left;" src="资源 11.png"><p class="head"><b>&nbsp;&nbsp;<a href="https://github.com/nicholeemma/Baidu/blob/gh-pages/MSIC%20One%20Page%20Guide.pptx" download="MISCPAGEGUIDE">IT指南</a></b></br></p>
+    	float: left;" src="资源 11.png"><p class="head"><b>&nbsp;&nbsp;<a href="https://github.com/nicholeemma/Baidu/blob/gh-pages/MSIC%20One%20Page%20Guide.pptx" download="MISCPAGEGUIDE.pptx">IT指南</a></b></br></p>
 
 	<img style="float: right; clear:both;" src="资源 7.png">
 	<p style="color:#013D90;float:right;clear: right;">Medtronic<br>
