--- a/transportation.html
+++ b/transportation.html
@@ -148,11 +148,11 @@
 	</p>
  <img class="pic" style="width: 32px; 
     	height: 32px;
-    	float: left;" src="13.PNG">
+    	float: left;" src="13.png">
 <p class="head" ><b>&nbsp;&nbsp;共享班车服务</b></br></p>
 <img class="pic" style="width: 32px; 
     	height: 32px;
-    	float: left;" src="12.PNG"><p class="head" style="width: 127px;"><b>&nbsp;&nbsp;停车服务</b></br></p>
+    	float: left;" src="12.png"><p class="head" style="width: 127px;"><b>&nbsp;&nbsp;停车服务</b></br></p>
 
 </div>
 
@@ -173,19 +173,19 @@ MIC（Medtronic Innovation Center），美敦力临床培训中心
 <br>
 上海漕河泾开发区田州路99号柯惠大楼2、5楼
 </p>
-<p class="destidetail"><img src="14.png" style="width: 15px; height: 15px;">公共交通：11号线转9号线，共8站，用时约51分钟
+<p class="destidetail"><img src="14.png" style="width: 15px; height: 15px;margin-right:5px">公共交通：11号线转9号线，共8站，用时约51分钟
 <br>
-<img src="15.png" style="width: 15px; height: 15px;">驾车：约13.7公里，用时约30分钟</p>
+<img src="15.png" style="width: 15px; height: 15px;margin-right:5px">驾车：约13.7公里，用时约30分钟</p>
  
 <p class="destination">
 MTC （Medtronic Technology Center），美敦力科技中心
 <br>上海市闵行区陈行路2388号3号楼6楼</p>
-<p class="destidetail"><img src="14.png" style="width: 15px; height: 15px;">公共交通：8号线，共三站，用时约20分钟
-<br><img src="15.png" style="width: 15px; height: 15px;">驾车：约8.2公里，用时约20分钟</p>
+<p class="destidetail"><img src="14.png" style="width: 15px; height: 15px;margin-right:5px">公共交通：8号线，共三站，用时约20分钟
+<br><img src="15.png" style="width: 15px; height: 15px;margin-right:5px">驾车：约8.2公里，用时约20分钟</p>
  
 <p class="destination">柯惠医疗器材制造（上海）有限公司</br>
 上海市闵行区漕河泾出口加工区浦星路789号10号楼</p>
-<p class="destidetail"><img src="14.png" style="width: 15px; height: 15px;">驾车：约7公里，用时约20分钟</p>
+<p class="destidetail"><img src="14.png" style="width: 15px; height: 15px;margin-right:5px;">驾车：约7公里，用时约20分钟</p>
 
 </div>
 
