--- a/transportation.html
+++ b/transportation.html
@@ -96,17 +96,17 @@
 	<p class="busno" style="float: right;">首/末班车时刻&nbsp;</p><p  class="busno">
 	&nbsp;84路</p>
 
-	<p class="busdetail" style="float: right;">——>永泰路东明路</p>
+	<p class="busdetail" style="float: right;">永泰路东明路</p>
 	<p class="busdetail">
-	济阳路泳耀路<——
+	济阳路泳耀路
 	</p>
 	<p class="busdetail">06:25-22:25 
 	</p>
 
 	<p class="busno" style="float: right;">首/末班车时刻&nbsp;</p><p class="busno">&nbsp;163路
-	<p class="busdetail" style="float: right;">——>江月路地铁站</p>
+	<p class="busdetail" style="float: right;">江月路地铁站</p>
 	<p class="busdetail">
-	东方体育中心<——
+	东方体育中心
 	</p>
 	<p class="busdetail">05:55-22:00
 	</p>
