--- a/transportation.html
+++ b/transportation.html
@@ -91,7 +91,7 @@
 <p class="head"  ><b>&nbsp;&nbsp;公共交通服务</b></br></p>
 
 
-<p style="font-size:1.2em;"><b><img src="16.png" style="width: 20px; height: 20px;">&nbsp;公交车</b></p>
+<p style="font-size:1.2em;"><b><img src="16.png" style="width: 20px; height: 20px;color:#013D90; ">&nbsp;公交车</b></p>
 
 	<p class="busno" style="float: right;">首/末班车时刻&nbsp;</p><p  class="busno">
 	&nbsp;84路</p>
@@ -119,7 +119,7 @@
     <p class="busno" style="background-color:#B72664;">&nbsp;6号线
     </p>
 	<p class="busdetail" style="float: right;">往港城路
-	</p><p class="busdetail">
+	</p><p class="busdetail" style="color:#013D90;">
 	往东方体育中心
 	</p>
 	<p class="busdetail" style="float: right;">05:30-22:30</p><p class="busdetail">
