--- a/transportation.html
+++ b/transportation.html
@@ -112,14 +112,14 @@
 	</p>
 
 
-<p style="font-size:1.2em;"><img src="14.png" style="width: 20px; height: 20px;"><b>&nbsp;东方体育中心站</b></p>
+<p style="font-size:1.2em; style="color:#013D90;"><img src="14.png" style="width: 20px; height: 20px;"><b>&nbsp;东方体育中心站</b></p>
 
 
     <p class="busno" style="float: right;background-color:#B72664;">首/末班车时刻&nbsp;</p>
     <p class="busno" style="background-color:#B72664;">&nbsp;6号线
     </p>
 	<p class="busdetail" style="float: right;">往港城路
-	</p><p class="busdetail" style="color:#013D90;">
+	</p><p class="busdetail"">
 	往东方体育中心
 	</p>
 	<p class="busdetail" style="float: right;">05:30-22:30</p><p class="busdetail">
