--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
 	<!--链接bootstrap-->
 <style type="text/css">
-   body{background-color: #6495ED;
+   body{background-color: #0085ca;
 	font-family:arial;}
    img{margin-left: 0;
        margin-right: 0;}
